# nodeeditor

./: .gitignore  CMakeLists.txt  README.md
cmake/: NodeEditorConfig.cmake.in
include/nodes/internal/: Connection.hpp  ConnectionGraphicsObject.hpp  ConnectionState.hpp  ConnectionStyle.hpp  DataModelRegistry.hpp  FlowScene.hpp  FlowView.hpp  FlowViewStyle.hpp  Node.hpp  NodeData.hpp  NodeDataModel.hpp  NodeGeometry.hpp  NodeGraphicsObject.hpp  NodeState.hpp  NodeStyle.hpp  QStringStdHash.hpp  TypeConverter.hpp
resources/: NodeEditor.qrc
src/: Connection.cpp  ConnectionGraphicsObject.cpp  ConnectionStyle.cpp  DataModelRegistry.cpp  FlowScene.cpp  FlowView.cpp  FlowViewStyle.cpp  Node.cpp  NodeConnectionInteraction.cpp  NodeConnectionInteraction.hpp  NodeDataModel.cpp  NodeGeometry.cpp  NodeGraphicsObject.cpp  NodePainter.cpp  NodeState.cpp  NodeStyle.cpp  StyleCollection.cpp  StyleCollection.hpp
